--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,15 @@
 List to Dict:
 
-	async def assign_employee_to_team(team_data: t.ConnectionTeamEmployee,db: AsyncSession = Depends(m.get_db_session)):
+##	async def assign_employee_to_team(team_data: t.ConnectionTeamEmployee,db: AsyncSession = Depends(m.get_db_session)):
 
-	async def create_employees(employee_data: t.Employee, db: AsyncSession = Depends(m.get_db_session)):
+##	async def create_employees(employee_data: t.Employee, db: AsyncSession = Depends(m.get_db_session)):
 
-	async def create_project(project_data: t.Project, db: AsyncSession = Depends(m.get_db_session)):
+##	async def create_project(project_data: t.Project, db: AsyncSession = Depends(m.get_db_session)):
 
-	async def create_team(team_data: t.Team, db: AsyncSession = Depends(m.get_db_session)):
+##	async def create_team(team_data: t.Team, db: AsyncSession = Depends(m.get_db_session)):
 
 In param change List to Dictionary
 
-In delete ConnectionTeamEmployee -> assigned_fte always 0
+##	In delete ConnectionTeamEmployee -> assigned_fte always 0
 
 
