--- a/todo.txt
+++ b/todo.txt
@@ -1,17 +1,8 @@
-List to Dict:
-
-##	async def assign_employee_to_team(team_data: t.ConnectionTeamEmployee,db: AsyncSession = Depends(m.get_db_session)):
-
-##	async def create_employees(employee_data: t.Employee, db: AsyncSession = Depends(m.get_db_session)):
-
-##	async def create_project(project_data: t.Project, db: AsyncSession = Depends(m.get_db_session)):
-
-##	async def create_team(team_data: t.Team, db: AsyncSession = Depends(m.get_db_session)):
-
 In param change List to Dictionary
-
-##	In delete ConnectionTeamEmployee -> assigned_fte always 0
-
 
 CREATE.SQL -> proj_man zu proj_man_id ändern
               cjs zu cjs_id ändern
+
+ConnectionTeamEmployee vergleichen mit current_fte in Projects
+
+GANTT ersten Monat anschauen, Termin endet im März Grafik im Februar
